# rules_jest

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bes.txt  build.txt  internal_deps.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  troubleshooting.md
.bcr/: config.yml  (+3 more)
docs/: BUILD.bazel  jest_test.md  rules.md  troubleshooting.md
e2e/coverage/: BUILD.bazel  MODULE.bazel  bar.js  bar.test.js  cachedir.jest.config.js  custom_reporters.jest.config.js  foo.js  foo.test.js  package.json  pkg_resolver.jest.config.js  pnpm-lock.yaml  resolver.jest.config.js  test.sh  user_resolver.cjs
e2e/external_repository/: .bazelrc  BUILD.bazel  MODULE.bazel
e2e/npm_packages/: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  jest.config.cjs.js  jest.config.esm.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
e2e/npm_packages/tools/: BUILD.bazel  jest-env.js  jest-env.mjs
e2e/smoke/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  index.test.js  pnpm-lock.yaml
e2e/smoke_jest_29/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  coverage.jest.config.js  failing.test.js  foobar.test.js  foobar_lib.js  package.json  pnpm-lock.yaml  test.sh
e2e/smoke_rjs3/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel  pnpm-workspace.yaml
e2e/swc/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  jest-swc-workaround.js  jest.config.js  package.json  pnpm-lock.yaml
e2e/swc/lib/: BUILD.bazel  mocked-cjs.test.js  mocked-esm.test.js  service.js  service.test.js
e2e/update_snapshots/: BUILD.bazel  WORKSPACE  pnpm-lock.yaml  test.sh
example/: BUILD.bazel  jest.config.js  package.json
example/(simple_group)/: BUILD.bazel  index.test.js
example/custom_reporters/: BUILD.bazel  index.test.js  jest.config.js
example/custom_sequencer/: BUILD.bazel  jest.config.js  sequencer.js
example/custom_snapshot_resolver/: .babelrc.js  BUILD.bazel  jest.config.js  link.js  snapshot_resolver.js
example/custom_snapshot_resolver_files/: BUILD.bazel  jest.config.js  link.test.js.snap  snapshot_resolver.js
example/esm/: BUILD.bazel  jest.config.mjs
example/esm_transform/: BUILD.bazel  index.test.js  jest.config.js
example/esm_type_module/: BUILD.bazel  index.test.js
example/multiple_snapshots/: BUILD.bazel  jest.config.js
example/sharding/: BUILD.bazel  index_2.test.js
example/simple/: BUILD.bazel  index.test.js  jest.config.json
example/snapshot/: BUILD.bazel  README.md  link.test.js
example/snapshots/: BUILD.bazel  greetings.jsx  greetings.test.jsx
example/snapshots_files/: BUILD.bazel  babel.config.json  link.jsx  link.test.js
example/snapshots_files/__snapshots__/: greetings.test.js.snap
example/zl/: BUILD.bazel  jest.config.js  package.json  tsconfig.json
example/zl/src/: BUILD.bazel  get-interface-ip.test.ts  get-interface-ip.ts
jest/: BUILD.bazel  defs.bzl  dependencies.bzl  repositories.bzl  toolchain.bzl
jest/private/: BUILD.bazel  bazel_haste_map.cjs  bazel_sequencer.cjs  bazel_sequencer.js  bazel_snapshot_reporter.cjs  bazel_snapshot_reporter.js  bazel_snapshot_resolver.cjs  bazel_snapshot_resolver.js  cli_repositories.bzl  jest_config_template.mjs  jest_test.bzl  merger.sh  package-lock.json  package.json  run_jest.js  toolchains_repo.bzl  versions.bzl
jest/private/v28.1.0/: defs.bzl  package.json  pnpm-lock.yaml  repositories.bzl
jest/private/v28.1.1/: package.json  pnpm-lock.yaml
jest/private/v28.1.2/: package.json  pnpm-lock.yaml
jest/private/v29.0.0/: package.json  pnpm-lock.yaml
jest/private/v29.0.1/: package.json  pnpm-lock.yaml
jest/private/v29.0.2/: package.json  pnpm-lock.yaml
jest/private/v29.0.3/: package.json  pnpm-lock.yaml
jest/private/v29.1.0/: package.json  pnpm-lock.yaml
jest/private/v29.1.1/: package.json  pnpm-lock.yaml
jest/private/v29.1.2/: package.json  pnpm-lock.yaml
jest/private/v29.2.0/: package.json  pnpm-lock.yaml
jest/private/v29.2.1/: package.json  pnpm-lock.yaml
jest/private/v29.2.2/: package.json  pnpm-lock.yaml
jest/private/v29.3.0/: package.json  pnpm-lock.yaml
jest/private/v29.3.1/: package.json  pnpm-lock.yaml
jest/tests/: BUILD.bazel  case1.test.js  case10.jest.config.js  case10.setup.js  case10.test.js  case12.test.js  case13.test.js  case14-lib.foo.js  case14.jest.config.js  case14.test.js  case6.test.js  case7.test.js  case8.test.js  case9.index.mjs  case9.jest.config.js  case9.test.mjs  multi_a.test.js  multi_b.test.js  package.json  versions_test.bzl
jest/tests/case10/: BUILD.bazel  case10.jest.config.js  case10.setup.js
jest/tests/case10/__snapshots__/: case10.test.js.snap
jest/tests/case10a/: BUILD.bazel  case10a.config-init.js  case10a.jest.config.js  case10a.test.js
jest/tests/case10a/__snapshots__/: case10a.test.js.snap
jest/tests/case11/: case11.test.js  case11a.jest.config.js  case11b.jest.config.js
jest/tests/case15/: BUILD.bazel  case15.test.js
jest/tests/case16/: BUILD.bazel  case16-rootdir-rel.jest.config.js  case16-roots.jest.config.js  case16.jest.config.js  case16.setup.js  case16.test.js  noconfig.test.js  root_level.test.js  snapshot.test.js
jest/tests/case16/__snapshots__/: snapshot.test.js.snap
jest/tests/case16/excluded/: poison.test.js
jest/tests/case16/included/: good.test.js
jest/tests/case16/rootdir_abs/: case16-rootdir-abs.jest.config.js  rootdir_abs.setup.js  rootdir_abs.test.js
jest/tests/case16/rootdir_rel/: rootdir_rel.setup.js  rootdir_rel.test.js
jest/tests/case16/subdir/: case16-subdir.jest.config.js  case16-subdir.setup.js  case16-subdir.test.js
jest/tests/configs/: BUILD.bazel  basic.jest.config.js
jest/tests/env_inherit/: BUILD.bazel  env_inherit.test.js
jest/tests/fixed_args/: BUILD.bazel  fixed_args.test.js
jest/tests/package_json_module/: BUILD.bazel  babel.config.cjs  jest.config.js  simple.test.js
jest/tests/reporter_require_resolve/: BUILD.bazel  assert-single-junit.cjs  reporter.jest.config.js
(+35 files in other folders)
