load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("//jest:defs.bzl", "jest_test")

npm_link_all_packages(name = "node_modules")

buildifier(
    name = "buildifier",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

buildifier(
    name = "buildifier.check",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    tags = ["manual"],  # tag as manual so windows ci does not build it by default
)

alias(
    name = "format",
    actual = "//tools:format",
)

# Test case 3: jest config file in root package
# Copy files from tests package to keep the root package clean.
copy_file(
    name = "case3_test_js",
    src = "//jest/tests:case3.test.js",
    out = "case3.test.js",
)

copy_file(
    name = "case3_jest_config_js",
    src = "//jest/tests:case3.jest.config.js",
    out = "case3.jest.config.js",
)

jest_test(
    name = "case3",
    config = "case3.jest.config.js",
    data = [
        "case3.test.js",
    ],
    node_modules = "//:node_modules",
)

copy_to_bin(
    name = "case8.config",
    srcs = ["test_case8.jest.config.js"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//jest/private:maybe"],
)
