"aspect-build/rules_jest"

module(
    name = "aspect_rules_jest",
    version = "0.0.0",
    compatibility_level = 1,
)

# Lower-bounds (minimum) versions for direct runtime dependencies
bazel_dep(name = "aspect_rules_js", version = "3.0.1")
bazel_dep(name = "aspect_tools_telemetry", version = "0.4.2")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_shell", version = "0.6.1")

tel = use_extension("@aspect_tools_telemetry//:extension.bzl", "telemetry")
use_repo(tel, "aspect_tools_telemetry_report")

####### Dev dependencies ########

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)
bazel_dep(name = "aspect_rules_lint", version = "1.13.0", dev_dependency = True)
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# aspect_rules_lint transitively pulls in rules_go 0.42.0, which references
# the legacy global `CcInfo` symbol that Bazel 9 removed. Pin to a current
# rules_go that loads CcInfo from a load statement.
bazel_dep(name = "rules_go", version = "0.60.0", dev_dependency = True)
