# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "jest_test",
    bzl_library_target = "//jest:defs",
    symbol_names = ["jest_test"],
)

update_docs(
    name = "update",
    tags = ["skip-on-bazel6"],  # slight docs difference in Bazel 6
)

# Demonstration delivery target for Aspect Workflows.
# In the future this could be wired up to push to a demonstration S3 bucket.
sh_binary(
    name = "docs_delivery_only_on_change",
    srcs = ["delivery.sh"],
    data = glob(["*.md"]),
    tags = ["deliverable"],
)

# Demonstration delivery target for Aspect Workflows.
# In the future this could be wired up to push to a demonstration S3 bucket.
sh_binary(
    name = "docs_delivery",
    srcs = ["delivery.sh"],
    data = glob(["*.md"]),
)
