load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//jest/private:is_bazel_7_or_greater.bzl", "is_bazel_7_or_greater")

# For stardoc to reference the files
exports_files(["defs.bzl"])

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//jest/private:jest_test",
        "@aspect_bazel_lib//lib:copy_file",
        "@aspect_bazel_lib//lib:directory_path",
        "@aspect_bazel_lib//lib:utils",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if is_bazel_7_or_greater() else []),
)

bzl_library(
    name = "dependencies",
    srcs = ["dependencies.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//jest/private:maybe"],
)
