load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# This is the target rule authors should put in their "toolchains"
# attribute in order to get a runtime for the correct platform.
# See https://docs.bazel.build/versions/main/toolchains.html#writing-rules-that-use-toolchains
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//jest/private:jest_test",
        "@aspect_tools_telemetry_report//:defs.bzl",
        "@bazel_lib//lib:copy_file",
        "@bazel_lib//lib:directory_path",
        "@bazel_lib//lib:utils",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
    ],
)

starlark_doc_extract(
    name = "defs.doc_extract",
    src = "defs.bzl",
    deps = [":defs"],
)
