load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

# ESM jest config
js_library(
    name = "jest.config.esm",
    srcs = [
        "jest.config.esm.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//tools:jest",
    ],
)

# CJS jest config
js_library(
    name = "jest.config.cjs",
    testonly = True,
    srcs = [
        "jest.config.cjs.js",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@babel/preset-env",
        "//:node_modules/babel-jest",
        "//tools:jest",
    ],
)
