"Bazel dependencies"

bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "aspect_rules_jest", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "1.29.2", dev_dependency = True)

local_path_override(
    module_name = "aspect_rules_jest",
    path = "../..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
