load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

jest_test(
    name = "test",
    config = "jest.config.js",
    data = [
        "failing.test.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
    target_compatible_with = select({
        # jest does not find tests on Windows; it appears the fix in https://github.com/jestjs/jest/pull/9351
        # for discovering tests when they are symlinks does not work on Windows.
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

jest_test(
    name = "by_path_test",
    args = [
        "--runTestsByPath",
        "index.test.js",
    ],
    config = "jest.config.js",
    data = ["index.test.js"],
    node_modules = "//:node_modules",
)

# Regression test for https://github.com/aspect-build/rules_jest/issues/322.
# The target name contains parentheses so the generated --config path also
# contains them. Without quoting in jest_test.bzl bash treats the parens as
# subshell syntax and jest fails to locate its config file.
jest_test(
    name = "test(parens)",
    data = ["index.test.js"],
    node_modules = "//:node_modules",
)
