load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//:__subpackages__"])

npm_link_all_packages(name = "node_modules")

js_library(
    name = "jest.config",
    srcs = ["jest.config.js"],
    deps = [":jest-swc-workaround"],
)

js_library(
    name = "jest-swc-workaround",
    srcs = ["jest-swc-workaround.js"],
)

copy_to_bin(
    name = "swcrc",
    srcs = [".swcrc"],
)
