load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

package(default_visibility = ["//:__subpackages__"])

npm_link_all_packages(name = "node_modules")

js_library(
    name = "jest.config",
    srcs = ["jest.config.js"],
    deps = [":jest-swc-workaround"],
)

js_library(
    name = "jest-swc-workaround",
    srcs = ["jest-swc-workaround.js"],
)

js_library(
    name = "swcrc",
    srcs = [".swcrc"],
)
