bazel_dep(name = "aspect_rules_jest", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "aspect_rules_jest",
    path = "../..",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.3", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "2.0.0-alpha.4", dev_dependency = True)
bazel_dep(name = "aspect_rules_swc", version = "1.2.2", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.9", dev_dependency = True)

archive_override(
    module_name = "aspect_rules_swc",
    integrity = "sha256-+BUkMlB7mYzuSBEuVWLM08zlh8BXnwsKSlgkBqFjF7Q=",
    strip_prefix = "rules_swc-3843ada2222c537e3c1982dec16b8d3d62a9da49",
    urls = ["https://github.com/aspect-build/rules_swc/archive/3843ada2222c537e3c1982dec16b8d3d62a9da49/3843ada2222c537e3c1982dec16b8d3d62a9da49.tar.gz"],
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
