bazel_dep(name = "aspect_rules_jest")
local_path_override(
    module_name = "aspect_rules_jest",
    path = "../..",
)

bazel_dep(name = "aspect_rules_js", version = "2.9.2", dev_dependency = True)

bazel_dep(name = "aspect_rules_swc", version = "2.6.1")
bazel_dep(name = "platforms", version = "1.0.0")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")
