load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

jest_test(
    name = "test",
    config = "jest.config.js",
    data = [
        "index.js",
        "index.test.js",
        "package.json",
        "babel.config.json",
        "//example:node_modules/babel-jest",
        "//example:node_modules/@babel/preset-env",
    ],
)
