load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

jest_test(
    name = "test",
    config = "jest.config.js",
    data = [
        "babel.config.json",
        "index.js",
        "index.test.js",
        "package.json",
        "//example:node_modules/@babel/preset-env",
        "//example:node_modules/babel-jest",
    ],
    node_modules = "//:node_modules",
)
