"""Shows how to setup jest_test to update snapshots.
"""

load("@aspect_rules_jest//jest:defs.bzl", "jest_test")
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

jest_test(
    name = "test",
    config = "jest.config.js",
    data = [
        ".babelrc.js",
        ":lib",
        ":tests",
        "//example:node_modules/@babel/core",
        "//example:node_modules/@babel/preset-env",
        "//example:node_modules/@babel/preset-react",
        "//example:node_modules/babel-jest",
    ],
    node_modules = "//:node_modules",
    # To update snapshots run,
    #    bazel run //example/snapshots:test_update_snapshots
    snapshots = True,
)

# The tests and tested are normally in their own targets.
js_library(
    name = "tests",
    testonly = True,
    srcs = [
        "greetings/greetings.test.js",
        "link/link.test.js",
    ],
    deps = [
        "//example:node_modules/react-test-renderer",
    ],
)

js_library(
    name = "lib",
    srcs = [
        "greetings/greetings.js",
        "link/link.js",
    ],
    deps = [
        "//example:node_modules/react",
    ],
)

# TEST: Ensure the {name}_update_snapshots target builds successfully
build_test(
    name = "update_snapshots_build",
    targets = [":test_update_snapshots"],
)
