load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

jest_test(
    name = "test",
    data = [
        "index.js",
        "index.test.js",
    ],
)

jest_test(
    name = "js_config_test",
    config = "jest.config.js",
    data = [
        "index.js",
        "index.test.js",
    ],
)

jest_test(
    name = "cjs_config_test",
    config = "jest.config.cjs",
    data = [
        "index.js",
        "index.test.js",
    ],
)

jest_test(
    name = "mjs_config_test",
    config = "jest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
    ],
)

jest_test(
    name = "json_config_test",
    config = "jest.config.json",
    data = [
        "index.js",
        "index.test.js",
    ],
)
